Bug 424062 - Inconsistent notifications on VPN connection state changes
Summary: Inconsistent notifications on VPN connection state changes
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networking in general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR minor
Target Milestone: 1.0
Assignee: Jan Grulich
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2020-07-10 12:47 UTC by ratijas
Modified: 2024-12-23 18:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21
Sentry Crash Report:


Attachments
dbus-monitor interface='org.freedesktop.Notifications' (4.03 KB, text/x-log)
2020-07-10 12:47 UTC, ratijas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ratijas 2020-07-10 12:47:35 UTC
Created attachment 130028 [details]
dbus-monitor interface='org.freedesktop.Notifications'

SUMMARY

Notification text is inconsistent for complementary actions.

STEPS TO REPRODUCE
1. Enable VPN
2. Disable VPN
(In contrast to...)
3. Enable Wi-Fi
4. Disable Wi-Fi

OBSERVED RESULT

1. ![VPN on](https://gitlab.freedesktop.org/NetworkManager/NetworkManager/uploads/d7cb000e22d47b93fc8e4de90ef20a15/image.png)

> %connection_name%
> 
> VPN connection '%connection_name%' activated.

2. ![VPN off](https://gitlab.freedesktop.org/NetworkManager/NetworkManager/uploads/21bd250d82e7a60e0efa2b442ff949f3/image.png)

> %connection_name%
> 
> The VPN connection changed state because the user disconnected it.

(In contrast to...)

3. ![Wi-Fi on](https://gitlab.freedesktop.org/NetworkManager/NetworkManager/uploads/9eb1f6f14852e58823e1db3797f37908/image.png)

> %connection_name%
> 
> Connection %connection_name% activated.

4. ![Wi-Fi off](https://gitlab.freedesktop.org/NetworkManager/NetworkManager/uploads/4109696f5d03d50d47d27054a98f574b/image.png)

> %connection_name%
> 
> Connection %connection_name% deactivated.

EXPECTED RESULT

Shouldn't it be just "VPN connection '%connection_name%' deactivated"? Or maybe "...deactivated by user" for clarity?

And why icons are different? No icon upon activation, but warning icon when disconnected.

Feels very inconsistent, like if it was developed by totally different people with different mindset and experience with the project.

SOFTWARE/OS VERSIONS

Arch Linux, KDE/Plasma
lib32-libnm-glib 1.18.5dev+12+ga8746f48ca-1
libnm 1.24.2-1
libnm-glib 1.18.5dev+12+ga8746f48ca-1
networkmanager 1.24.2-1


ADDITIONAL INFORMATION

Moved from FreeDesktop GitLab issue: https://gitlab.freedesktop.org/NetworkManager/NetworkManager/-/issues/490#note_561302

Further, I've been able to track down the root cause of this. It appears that
functions from libs/handler.cpp and kded/notification.cpp are responsible for
sending such notifications.

DBus log obtained by running `$ dbus-monitor interface='org.freedesktop.Notifications'`
is attached below. Events are reordered to match bullet points above, but it hardly matter.

I think I might be able to 'fix' it on my own. But it would require subsequent intervention of translations team. So, any help at this process would be appreciated.
Comment 1 Bug Janitor Service 2020-09-16 18:28:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-nm/-/merge_requests/25
Comment 2 Nate Graham 2020-09-17 15:50:55 UTC
Git commit 93ec12dd77a361a2ec5685be757d916461164da3 by Nate Graham.
Committed on 17/09/2020 at 15:49.
Pushed by ngraham into branch 'master'.

Change VPN notification strings to be consistent

Now they use the consistent terminology, and consistently refer to
the connection names.
FIXED-IN: 5.21

M  +10   -10   kded/notification.cpp

https://invent.kde.org/plasma/plasma-nm/commit/93ec12dd77a361a2ec5685be757d916461164da3
Comment 3 Ben Cooksley 2024-12-23 18:23:36 UTC
Bulk transfer as requested in T17796