Change VPN notification strings to be consistent

Now they use the consistent terminology, and consistently refer to
the connection names.

BUG: 424062
FIXED-IN: 5.21